--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>QRcode Card | Frontend Mentor</title>
 </head>
 <body>
     <main>
         <section>
             <div class="img-div">
-                <img src="/qr-code-component-main/images/image-qr-code.png" alt="">
+                <img src="/image-qr-code.png" alt="">
             </div>
             <div class="description">
                 <h1>Lorem ipsum dolor sit amet</h1>
