--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <section>
             <div class="img-div">
-                <img src="/image-qr-code.png" alt="">
+                <img src="image-qr-code.png" alt="">
             </div>
             <div class="description">
                 <h1>Lorem ipsum dolor sit amet</h1>
